--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,8 @@
 {
-  "Logging": {
+  "ConnectionStrings": {
+    "SchoolManagementDbConnection":"Server=localhost, 1433;Database=SchoolManagementDb;Trusted_Connection=false;MultipleActiveResultSets=true;Encrypt=false;user id=sa;password=AppLeonet95"
+  },
+    "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
