--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Domain":"dev-2zokqjoe0zp35lxx.us.auth0.com",
+    "ClientId":"pHxlCUSNmeAV9nNmU8BaFPrGNHpmGE00"
+  }
 }
